[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/Other/imgbin_computer-icons-png.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CheckerFlag_2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 179.5, 178.5 )

[node name="CheckerFlag" type="Area2D"]
script = ExtResource( 2 )

[node name="FlagSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 13.5, -12.5 )
shape = SubResource( 1 )

[node name="LevelFinishedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_CheckerFlag_body_entered"]
[connection signal="timeout" from="LevelFinishedTimer" to="." method="_on_LevelFinishedTimer_timeout"]
